--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+
 @font-face{
     font-family: "IBMPlexSans-SemiBold";
     src: url("../font/IBMPlexSans-SemiBold.ttf") format("truetype");
@@ -70,6 +73,10 @@ body{
 }
 
 .descrizione_1{
+  background-color: #0E101A;
+}
+
+.descrizione_home{
   background-color: #4950AB;
 }
 
@@ -390,8 +397,6 @@ h4{
 }
 
 
-
-
 .timeline_monalisa{
   max-width: 100%;
 }
@@ -400,4 +405,10 @@ h4{
   max-width: 100%;
 }
 
+.descrizione_home a {
+  color: white;
+}
 
+.descrizione_home a:hover {
+  color:aqua; 
+}
