fix font italic

--- a/style.css
+++ b/style.css
@@ -243,6 +243,7 @@ h3{
 /*   font-family: "IBMPlexSans-LightItalic";
  */  
  font-weight: 300;
+ font-style: italic;
  font-size: 16px;
   color: #0E101A;
   margin-top: -15px;
