--- a/style.css
+++ b/style.css
@@ -106,92 +106,99 @@
 }
 
 
-body{
-    font-family: "IBM Plex Sans", sans-serif;
+body {
+  font-family: "IBM Plex Sans", sans-serif;
 }
 
 /* Custom CSS styles for the navbar */
 .navbar {
-    background-color: #0E101A; /* Colore di sfondo della navbar */
-  }
-
-  .logo{
-    margin-left: 70px;
-  }
-  
-  .navbar-nav {
-    margin-left: 830px; /* Sposta i link a destra nella navbar */
-  }
-  
-  .navbar-nav .nav-link {
-    /* font-family: "IBMPlexSans-Light"; */
-    font-weight: 300;
-    color: #ffffff; /* Colore del testo dei link */
-    font-size: 16px;
-  }
-  
-  .navbar-nav .nav-link:hover {
-    color: #ffffff; /* Cambia il colore del testo al passaggio del mouse */
-  }
-
-  .navbar-nav .nav-item {
-    margin-right: 100px; /* Aggiunge spazio tra gli elementi del menu */
-  }
-
-  
-.primapagina{
-    background-color:  #4950AB;
-}
-
-.titolo h1 {
-    margin-top: 170px;
-    font-size: 100px;
-    margin-left: 70px;
-/*     font-family: "IBMPlexSans-SemiBold";
- */    
- font-weight: 600;
- color: white;
-  }
-
-.enlarged-image{
-    width: 120%;
-    height: auto;
-    margin-top: 70px;
-    margin-left: 15px;
-}
-
-.descrizione_1{
   background-color: #0E101A;
+  /* Colore di sfondo della navbar */
 }
 
-.descrizione_home{
+.logo {
+  margin-left: 70px;
+}
+
+.navbar-nav {
+  margin-left: 830px;
+  /* Sposta i link a destra nella navbar */
+}
+
+.navbar-nav .nav-link {
+  /* font-family: "IBMPlexSans-Light"; */
+  font-weight: 300;
+  color: #ffffff;
+  /* Colore del testo dei link */
+  font-size: 16px;
+}
+
+.navbar-nav .nav-link:hover {
+  color: #ffffff;
+  /* Cambia il colore del testo al passaggio del mouse */
+}
+
+.navbar-nav .nav-item {
+  margin-right: 100px;
+  /* Aggiunge spazio tra gli elementi del menu */
+}
+
+
+.primapagina {
   background-color: #4950AB;
 }
 
-.paragrafo_1{
+.titolo h1 {
+  margin-top: 170px;
+  font-size: 100px;
+  margin-left: 70px;
+  /*     font-family: "IBMPlexSans-SemiBold";
+ */
+  font-weight: 600;
+  color: white;
+}
+
+.enlarged-image {
+  width: 120%;
+  height: auto;
+  margin-top: 70px;
+  margin-left: 15px;
+}
+
+.descrizione_1 {
+  background-color: #0E101A;
+}
+
+.descrizione_home {
+  background-color: #4950AB;
+}
+
+.paragrafo_1 {
   margin-top: 150px;
   color: white;
-/*   font-family: "IBMPlexSans-Light";
- */  font-size: 16px;
+  /*   font-family: "IBMPlexSans-Light";
+ */
+  font-size: 16px;
   padding-right: 100px;
   margin-bottom: 100px;
 }
 
-.sottotitolo_1 h2{
+.sottotitolo_1 h2 {
   margin-top: 130px;
   color: white;
-/*   font-family: "IBMPlexSans-Regular";
- */  
- font-weight: 400;
- font-size: 32px;
+  /*   font-family: "IBMPlexSans-Regular";
+ */
+  font-weight: 400;
+  font-size: 32px;
   margin-left: 70px;
   margin-bottom: 20px;
 }
 
-h3{
-/*   font-family: "IBMPlexSans-SemiBold";
- */  color: #0E101A;
- font-weight: 600;
+h3 {
+  /*   font-family: "IBMPlexSans-SemiBold";
+ */
+  color: #0E101A;
+  font-weight: 600;
   font-size: 21px;
   margin-top: 100px;
   margin-left: 70px;
@@ -203,149 +210,187 @@ h3{
 /* Galleria homepage */
 
 .image-gallery {
-  overflow-x: auto; /* Abilita lo scorrimento orizzontale */
-  white-space: nowrap; /* Evita il wrap degli elementi. Gli elementi rimangono sulla stessa linea orizzontale */
+  overflow-x: auto;
+  /* Abilita lo scorrimento orizzontale */
+  white-space: nowrap;
+  /* Evita il wrap degli elementi. Gli elementi rimangono sulla stessa linea orizzontale */
 }
 
 .scrolling-container {
-  display: inline-block; /* Mostra gli elementi in linea */
+  display: inline-block;
+  /* Mostra gli elementi in linea */
 }
 
 .Monalisa_home {
-  display: inline-block; /* Mostra l'immagine e il testo in linea */
+  display: inline-block;
+  /* Mostra l'immagine e il testo in linea */
   margin-left: 70px;
   margin-right: 50px;
 }
 
 .scroll_monalisa {
-  width: 190px; /* Imposta la larghezza dell'immagine più piccola */
-  height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni */
+  width: 190px;
+  /* Imposta la larghezza dell'immagine più piccola */
+  height: auto;
+  /* Imposta l'altezza automaticamente per mantenere le proporzioni */
 }
 
 .home_titolo-didascalia {
-  font-size: 18px; /* Imposta la dimensione del carattere */
-  margin-top: 15px; /* Aggiungi un margine superiore per separare il testo dall'immagine */
-/*   font-family: "IBMPlexSans-SemiBold";
- */  
- font-weight: 600;
- color: #0E101A;
+  font-size: 18px;
+  /* Imposta la dimensione del carattere */
+  margin-top: 15px;
+  /* Aggiungi un margine superiore per separare il testo dall'immagine */
+  /*   font-family: "IBMPlexSans-SemiBold";
+ */
+  font-weight: 600;
+  color: #0E101A;
 }
 
-.autore{
-/*   font-family: "IBMPlexSans-Regular";
- */  font-size: 16px;
- font-weight: 400;
+.autore {
+  /*   font-family: "IBMPlexSans-Regular";
+ */
+  font-size: 16px;
+  font-weight: 400;
   color: #0E101A;
   margin-top: -15px;
 }
 
-.desc{
-/*   font-family: "IBMPlexSans-LightItalic";
- */  
- font-weight: 300;
- font-style: italic;
- font-size: 16px;
+.desc {
+  /*   font-family: "IBMPlexSans-LightItalic";
+ */
+  font-weight: 300;
+  font-style: italic;
+  font-size: 16px;
   color: #0E101A;
   margin-top: -15px;
 }
 
 .Olympia-home {
-  display: inline-block; /* Mostra l'immagine e il testo in linea */
+  display: inline-block;
+  /* Mostra l'immagine e il testo in linea */
   margin-right: 50px;
 }
 
 .scroll_olympia {
-  width: 450px; /* Imposta la larghezza dell'immagine più piccola */
-  height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni */
+  width: 450px;
+  /* Imposta la larghezza dell'immagine più piccola */
+  height: auto;
+  /* Imposta l'altezza automaticamente per mantenere le proporzioni */
 }
 
 .Venere-home {
-  display: inline-block; /* Mostra l'immagine e il testo in linea */
+  display: inline-block;
+  /* Mostra l'immagine e il testo in linea */
   margin-right: 50px;
 }
 
 .scroll_venere {
-  width: 530px; /* Imposta la larghezza dell'immagine più grande */
-  height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni */
+  width: 530px;
+  /* Imposta la larghezza dell'immagine più grande */
+  height: auto;
+  /* Imposta l'altezza automaticamente per mantenere le proporzioni */
 }
 
 .Rolin-home {
-  display: inline-block; /* Mostra l'immagine e il testo in linea */
+  display: inline-block;
+  /* Mostra l'immagine e il testo in linea */
   margin-right: 50px;
 }
 
 .scroll_rolin {
-  width: 300px; /* Imposta la larghezza dell'immagine più piccola */
-  height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni */
+  width: 300px;
+  /* Imposta la larghezza dell'immagine più piccola */
+  height: auto;
+  /* Imposta l'altezza automaticamente per mantenere le proporzioni */
 }
 
 .Cavaliere-home {
-  display: inline-block; /* Mostra l'immagine e il testo in linea */
+  display: inline-block;
+  /* Mostra l'immagine e il testo in linea */
   margin-right: 50px;
 }
 
 .scroll_cavaliere {
-  width: 200px; /* Imposta la larghezza dell'immagine più piccola */
-  height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni */
+  width: 200px;
+  /* Imposta la larghezza dell'immagine più piccola */
+  height: auto;
+  /* Imposta l'altezza automaticamente per mantenere le proporzioni */
 }
 
 .Delacroix-home {
-  display: inline-block; /* Mostra l'immagine e il testo in linea */
+  display: inline-block;
+  /* Mostra l'immagine e il testo in linea */
   margin-right: 50px;
 }
 
 .scroll_delacroix {
-  width: 450px; /* Imposta la larghezza dell'immagine più piccola */
-  height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni */
+  width: 450px;
+  /* Imposta la larghezza dell'immagine più piccola */
+  height: auto;
+  /* Imposta l'altezza automaticamente per mantenere le proporzioni */
 }
 
 .Angelus-home {
-  display: inline-block; /* Mostra l'immagine e il testo in linea */
+  display: inline-block;
+  /* Mostra l'immagine e il testo in linea */
   margin-right: 50px;
 }
 
 .scroll_angelus {
-  width: 330px; /* Imposta la larghezza dell'immagine più piccola */
-  height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni */
+  width: 330px;
+  /* Imposta la larghezza dell'immagine più piccola */
+  height: auto;
+  /* Imposta l'altezza automaticamente per mantenere le proporzioni */
 }
 
 .Guernica-home {
-  display: inline-block; /* Mostra l'immagine e il testo in linea */
+  display: inline-block;
+  /* Mostra l'immagine e il testo in linea */
   margin-right: 50px;
   margin-bottom: 50px;
 }
 
 .scroll_guernica {
-  width: 880px; /* Imposta la larghezza dell'immagine più piccola */
-  height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni */
+  width: 880px;
+  /* Imposta la larghezza dell'immagine più piccola */
+  height: auto;
+  /* Imposta l'altezza automaticamente per mantenere le proporzioni */
 }
 
 .Docteur-home {
-  display: inline-block; /* Mostra l'immagine e il testo in linea */
+  display: inline-block;
+  /* Mostra l'immagine e il testo in linea */
   margin-right: 50px;
 }
 
 .scroll_docteur {
-  width: 200px; /* Imposta la larghezza dell'immagine più piccola */
-  height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni */
+  width: 200px;
+  /* Imposta la larghezza dell'immagine più piccola */
+  height: auto;
+  /* Imposta l'altezza automaticamente per mantenere le proporzioni */
 }
 
 .Trittico-home {
-  display: inline-block; /* Mostra l'immagine e il testo in linea */
+  display: inline-block;
+  /* Mostra l'immagine e il testo in linea */
   margin-right: 50px;
 }
 
 .scroll_trittico {
-  width: 700px; /* Imposta la larghezza dell'immagine più piccola */
-  height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni */
+  width: 700px;
+  /* Imposta la larghezza dell'immagine più piccola */
+  height: auto;
+  /* Imposta l'altezza automaticamente per mantenere le proporzioni */
 }
 
 /* Footer*/
 
 .footer {
   background-color: #0E101A;
-  padding: 50px 0; /* Aggiunge spazio intorno al contenuto */
-  text-align: center; /* Centra il contenuto orizzontalmente */
+  padding: 50px 0;
+  /* Aggiunge spazio intorno al contenuto */
+  text-align: center;
+  /* Centra il contenuto orizzontalmente */
 }
 
 .visual {
@@ -361,18 +406,21 @@ h3{
 }
 
 .Progetto_footer {
-/*   font-family: "IBMPlexSans-Light";
- */  
- font-weight: 300;
- color: white;
+  /*   font-family: "IBMPlexSans-Light";
+ */
+  font-weight: 300;
+  color: white;
   font-size: 12px;
   margin-left: 300px;
 }
 
 .footer_unirsm {
-  width: 140px; /* Imposta la larghezza del logo */
-  height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni */
-  margin-bottom: 20px; /* Spazio inferiore tra il logo e il testo */
+  width: 140px;
+  /* Imposta la larghezza del logo */
+  height: auto;
+  /* Imposta l'altezza automaticamente per mantenere le proporzioni */
+  margin-bottom: 20px;
+  /* Spazio inferiore tra il logo e il testo */
   margin-left: 400px;
 }
 
@@ -380,135 +428,137 @@ h3{
 
 /* OPERE */
 
-.colonna_immagine{
+.colonna_immagine {
   margin-top: 100px;
-  margin-left: 0px; /* se inserisco margin-left potrebbe portarmi il contenuto della seconda colonna sotto*/
+  margin-left: 0px;
+  /* se inserisco margin-left potrebbe portarmi il contenuto della seconda colonna sotto*/
   margin-bottom: 100px;
 }
 
-.dipinto_monalisa{
+.dipinto_monalisa {
   max-width: 50%;
   height: auto;
   margin-left: 150px;
   margin-top: 20px;
 }
 
-.paragrafo_opera{
+.paragrafo_opera {
   margin-top: 100px;
   padding-right: 200px;
   margin-bottom: 100px;
 }
 
-.artista{
-/*   font-family: "IBMPlexSans-Regular";
- */  
- font-weight: 400;
- color: #0E101A;
+.artista {
+  /*   font-family: "IBMPlexSans-Regular";
+ */
+  font-weight: 400;
+  color: #0E101A;
   font-size: 18px;
 }
 
-.didascalia{
-/*   font-family: "/* IBMPlexSans-Light";/*
- */  
- font-weight: 300;
- color: #0E101A;
+.didascalia {
+  /*   font-family: "/* IBMPlexSans-Light";/*
+ */
+  font-weight: 300;
+  color: #0E101A;
   font-size: 16px;
   padding-top: 20px;
 }
 
-.testo_opera{
-/*   font-family: "IBMPlexSans-Light";
- */  
- font-weight: 300;
- color: #0E101A;
+.testo_opera {
+  /*   font-family: "IBMPlexSans-Light";
+ */
+  font-weight: 300;
+  color: #0E101A;
   font-size: 18px;
   padding-top: 20px;
 }
 
-.dipinto_olympia{
+.dipinto_olympia {
   max-width: 85%;
   height: auto;
   margin-left: 40px;
   margin-top: 50px;
 }
 
-.dipinto_venere{
+.dipinto_venere {
   max-width: 90%;
   height: auto;
   margin-left: 40px;
   margin-top: 50px;
 }
 
-.dipinto_rolin{
+.dipinto_rolin {
   max-width: 65%;
   height: auto;
   margin-left: 110px;
   margin-top: 50px;
 }
 
-.dipinto_chevalier{
+.dipinto_chevalier {
   max-width: 50%;
   height: auto;
   margin-left: 140px;
   margin-top: 50px;
 }
 
-.dipinto_cézanne{
+.dipinto_cézanne {
   max-width: 85%;
   height: auto;
   margin-left: 70px;
   margin-top: 50px;
 }
 
-.dipinto_angelus{
+.dipinto_angelus {
   max-width: 75%;
   height: auto;
   margin-left: 70px;
   margin-top: 30px;
 }
 
-.dipinto_guernica{
+.dipinto_guernica {
   max-width: 95%;
   height: auto;
   margin-left: 25px;
   margin-top: 100px;
 }
 
-.dipinto_docteur{
+.dipinto_docteur {
   max-width: 55%;
   height: auto;
   margin-left: 150px;
   margin-top: 40px;
 }
 
-.dipinto_trittico{
+.dipinto_trittico {
   max-width: 95%;
   height: auto;
   margin-left: 30px;
   margin-top: 70px;
 }
 
-h4{
-/*   font-family: "IBMPlexSans-SemiBold";
- */  
- font-weight: 600;
- font-size: 18px;
+h4 {
+  /*   font-family: "IBMPlexSans-SemiBold";
+ */
+  font-weight: 600;
+  font-size: 18px;
 }
 
 /* Timeline riviste*/
 
 #sticky-element {
-  position: -webkit-sticky; /* Per la compatibilità con alcuni browser */
+  position: -webkit-sticky;
+  /* Per la compatibilità con alcuni browser */
   position: sticky;
   top: 0px;
 }
 
 
-.timeline_monalisa{
+.timeline_monalisa {
   max-width: 100%;
 }
 
-.riviste{
+.riviste {
   max-width: 100%;
 }
 
@@ -517,13 +567,13 @@ h4{
 }
 
 .descrizione_home a:hover {
-  color:aqua; 
+  color: aqua;
 }
 
-.descrizione_1 a{
+.descrizione_1 a {
   color: white;
 }
 
-.descrizione_1 a:hover{
-  color:aqua; 
+.descrizione_1 a:hover {
+  color: aqua;
 }
